third_party/rust/rayon/tests/compile-fail/cannot_collect_filtermap_data.rs
extern
crate
rayon
;
use
rayon
:
:
prelude
:
:
*
;
fn
main
(
)
{
let
a
:
Vec
<
usize
>
=
(
0
.
.
1024
)
.
collect
(
)
;
let
mut
v
=
vec
!
[
]
;
a
.
par_iter
(
)
.
filter_map
(
|
&
x
|
Some
(
x
as
f32
)
)
.
collect_into
(
&
mut
v
)
;
}
